argocd-mcp/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcp-for-argocd
  namespace: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mcp-for-argocd
  template:
    metadata:
      labels:
        app: mcp-for-argocd
    spec:
      serviceAccountName: oauth2-proxy
      containers:
        - name: mcp-for-argocd
          image: ghcr.io/argoproj-labs/mcp-for-argocd:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
