argocd-mcp/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mcp-for-argocd
  namespace: argocd
spec:
  selector:
    app: mcp-for-argocd
  ports:
    - name: http
      port: 3000
      targetPort: 3000
