argocd-mcp/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mcp-for-argocd
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
    - host: mcp-argocd.kigawa.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 4180
